2010-01-26  vadim  <vadim@vk.crocodile.org>

	* DiscoveryDruid.cpp (DiscoveryDruid::createRealObjects): fixes #1144
	after snmp discovery object attributes are not shown properly
	in the tree

2010-01-25  vadim  <vadim@vk.crocodile.org>

	* ProjectPanel_file_ops.cpp (ProjectPanel::chooseNewFileName):
	fixes #1157 Qt dialog does not detect conflict of filenames
	properly for linux. When user tried to create new file using
	File/New or save existing one using using File/SaveAs and entered
	a name without extension when prompted to enter the file name, the
	program would overwrite existing file with the same name and
	suffix ".fwb" without warning. This happened on Linux but did not
	happen on Mac OS X where dialog automatically added the suffix to
	the file name.

	* PolicyCompiler_pf.cpp (PolicyCompiler_pf::insertCarpRule):
	fixes #1152 CARP and pfsync rules should match "in" and "out".
	Automatically added rules for CARP and pfsync for the PF firewall
	should match in both directions, rather than just "out".

	* NATCompiler_ipt.cpp (AssignInterface::processNext): fixes #1150
	"fwb_ipt should check AddressRange in TSrc against addresses of
	interfaces". Compiler for iptables finds interface that matches
	AddressRange object used in Translated Source of a NAT rule and
	uses it for the "-o intf" clause. Addresses of interface can match
	the range excactly or partially. Exact match is when range
	boundaries match the beginning and the end of the subnet defined
	by the interface address and netmask. Partial match is when one of
	the range boundaries belongs to the subnet but another one does
	not. In this case compiler uses inetrface but issues a warning. If
	interface has multiple ip addresses, all of them are taken into
	consideration and interface is used if at least one matches. If
	address range in TSrc is wide and matches subnets of several
	interfaces, compiler splits the rule and uses all of them but does